[package]
name = "everest-mod-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
dir = "0.1.2"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1.0", features = ["full"] }
futures-util = "0.3"
sha1 = "0.10"
hex = "0.4"
indicatif = "0.17"
zip = "0.6"
