[package]
name = "everest-mod-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
directories = "5.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1.0", features = ["full"] }
futures-util = "0.3"
indicatif = "0.17"
zip = "2.2.2"
md-5 = "0.10"
digest = "0.10"

[dev-dependencies]
tempfile = "3.9"
